force-app/main/default/objects/bofc__BOFCUserProfPerSet__c/bofc__BOFCUserProfPerSet__c.object-meta.xml
<CustomObject>
    <label>BOFCUserProfPerSet</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>BOFCUserProfPerSet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFCUserProfPerSet</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>