force-app/main/default/objects/bofc__BOFCUserProfPerSet__c/fields/bofc__PROFILE_ID__c.field-meta.xml
<CustomField>
    <fullName>bofc__PROFILE_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PROFILE ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>