force-app/main/default/objects/bofc__BOFCUserProfPerSet__c/fields/bofc__UserPermSets__c.field-meta.xml
<CustomField>
    <fullName>bofc__UserPermSets__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UserPermSets</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>